# omniscient

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  dprint.json  install.sh  omniscient.example.toml
.github/workflows/: ci.yml
src/: chunk.rs  cli.rs  config.rs  distill.rs  embed.rs  engine.rs  error.rs  freshness.rs  index.rs  lib.rs  main.rs  mcp.rs  refresh.rs  watcher.rs
tests/: integration.rs
tests/fixtures/: sample.md  sample.py  sample.rs  sample.ts  sample_tests.rs
