[package]
name = "omniscient"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.103"
arrow-array = "58"
arrow-schema = "58"
async-trait = "0.1.89"
blake3 = "1.8.5"
clap = { version = "4.6.1", features = ["derive"] }
futures = "0.3.32"
ignore = "0.4.26"
lancedb = "0.30.0"
notify-debouncer-full = "0.7"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
rmcp = { version = "1.8.0", features = ["server", "macros", "transport-io"] }
schemars = "1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
thiserror = "2.0.18"
tokio = { version = "1.52.3", features = ["rt-multi-thread", "macros", "fs", "process", "sync"] }
toml = "1.1.2"
tracing = "0.1.44"
tracing-subscriber = "0.3.23"
tree-sitter = "0.26.9"
tree-sitter-python = "0.25.0"
tree-sitter-rust = "0.24.2"
tree-sitter-typescript = "0.23.2"
walkdir = "2.5.0"

[dev-dependencies]
tempfile = "3.27.0"

# Release binary is dominated by LanceDB's embedded DataFusion query engine.
# strip + thin LTO + a single codegen unit trim dead code across crates without
# the multi-minute rebuilds that "fat" LTO costs.
[profile.release]
strip = true
lto = "thin"
codegen-units = 1
